; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_metadata_sync.c_MetadataDropCommands.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_metadata_sync.c_MetadataDropCommands.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NIL = common dso_local global i32* null, align 8
@REMOVE_ALL_CLUSTERED_TABLES_COMMAND = common dso_local global i32 0, align 4
@DELETE_ALL_NODES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @MetadataDropCommands() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32*, i32** @NIL, align 8
  store i32* %3, i32** %1, align 8
  %4 = call i32* (...) @DetachPartitionCommandList()
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %1, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @list_concat(i32* %5, i32* %6)
  store i32* %7, i32** %1, align 8
  %8 = load i32*, i32** %1, align 8
  %9 = load i32, i32* @REMOVE_ALL_CLUSTERED_TABLES_COMMAND, align 4
  %10 = call i32* @lappend(i32* %8, i32 %9)
  store i32* %10, i32** %1, align 8
  %11 = load i32*, i32** %1, align 8
  %12 = load i32, i32* @DELETE_ALL_NODES, align 4
  %13 = call i32* @lappend(i32* %11, i32 %12)
  store i32* %13, i32** %1, align 8
  %14 = load i32*, i32** %1, align 8
  ret i32* %14
}

declare dso_local i32* @DetachPartitionCommandList(...) #1

declare dso_local i32* @list_concat(i32*, i32*) #1

declare dso_local i32* @lappend(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
